<resources>
    <string name="app_name">ToMeet</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="likes">Likes</string>
    <string name="profile">profile</string>
    <string name="name">이름</string>
    <string name="tag">태그</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_meet">To Meet</string>
    <string name="id">Id</string>
    <string name="password">PassWord</string>
    <string name="login">로그인</string>
    <string name="login2">Login</string>
    <string name="register">회원가입</string>
    <string name="registerText">계정이 없으시다면</string>
    <string name="mypage">MyPage</string>
    <string name="singin">가입하기</string>
    <string name="title_activity_my_page_setting">MyPageSettingActivity</string>
    <string name="facebook_app_id">386936921904671</string>
    <string name="fb_login_protocol_scheme">fb386936921904671</string>
    <string name="or">OR</string>
    <string name="toggle_fab_string">Toggle Screen</string>
    <string name="primary_screen_text">Primary Screen</string>
    <string name="nav_item1">item1</string>
    <string name="nav_item2">item2</string>
    <string name="nav_item3">item3</string>
    <string name="nav_item4">item4</string>
    <string name="nav_item5">item5</string>
    <string name="nav_item6">item6</string>
    <string name="bottom_sheet_name">ToMeet</string>
    <string name="bottom_sheet_email">qls20021129@gmail.com</string>
    <string name="secondary_sceen_text">Secondary Screen</string>
    <string name="age">나이</string>
</resources>
