<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav1"
            android:icon="@drawable/ic_looks_one_black_24dp"
            android:title="@string/nav_item1" />
        <item
            android:id="@+id/nav2"
            android:icon="@drawable/ic_looks_two_black_24dp"
            android:title="@string/nav_item2" />
        <item
            android:id="@+id/nav3"
            android:icon="@drawable/ic_looks_3_black_24dp"
            android:title="@string/nav_item3" />
        <item
            android:id="@+id/nav4"
            android:icon="@drawable/ic_looks_4_black_24dp"
            android:title="@string/nav_item4" />
        <item
            android:id="@+id/nav5"
            android:icon="@drawable/ic_looks_5_black_24dp"
            android:title="@string/nav_item5" />
        <item
            android:id="@+id/nav6"
            android:icon="@drawable/ic_looks_6_black_24dp"
            android:title="@string/nav_item6" />
        <item
            android:id="@+id/nav7"
            android:icon="@drawable/ic_looks_one_black_24dp"
            android:title="@string/nav_item1" />
        <item
            android:id="@+id/nav8"
            android:icon="@drawable/ic_looks_two_black_24dp"
            android:title="@string/nav_item2" />
        <item
            android:id="@+id/nav9"
            android:icon="@drawable/ic_looks_3_black_24dp"
            android:title="@string/nav_item3" />
        <item
            android:id="@+id/nav10"
            android:icon="@drawable/ic_looks_4_black_24dp"
            android:title="@string/nav_item4" />
        <item
            android:id="@+id/nav11"
            android:icon="@drawable/ic_looks_5_black_24dp"
            android:title="@string/nav_item5" />
        <item
            android:id="@+id/nav12"
            android:icon="@drawable/ic_looks_6_black_24dp"
            android:title="@string/nav_item6" />
    </group>
</menu>